add partners in home

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -84,14 +84,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2 class="title">Nuestros Clientes</h2>
+                <h2 class="title">Alianzas</h2>
                 <h4 class="title">El buen servicio y los buenos resultados conducen a la confianza</h4>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-3" ng-repeat="client in home.clients.results">
+            <div class="col-sm-3" ng-repeat="partern in home.parterns.results">
                 <div class="single_blog wow slideInUp" data-wow-duration="1s">
-                    <img class="img-responsive" ng-src="{{ client.featuredImage }}" alt="{{ client.title }}">
+                    <img class="img-responsive" ng-src="{{ partern.featuredImage }}" alt="{{ partern.title }}">
                 </div>
             </div>
         </div>
