--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -2,13 +2,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2 class="title">< Page title ></h2>
+                <h2 class="title">< {{ page.detail.title }} ></h2>
                 <hr class="divider"/>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12 content-pages">
                 <!--content here-->
+                {{ page.detail.content }}
             </div>
         </div>
     </div>
