update blog list

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -9,7 +9,7 @@
         </div>
         <div class="row">
             <div class="col-md-12 content-pages">
-                <a ui-sref="post_detail({slug: post.list.results[0].slug})">detail</a>
+                <!--post list -->
             </div>
         </div>
     </div>
