--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -57,7 +57,7 @@
 
 
   .header_area_text
-    padding-right 0px
+    padding-right 0
 
 
   .navbar-toggle .icon-bar
@@ -74,7 +74,7 @@
   .experience a,
   .call_project a
     padding 8px 10px
-    margin-top 0px
+    margin-top 0
 
 
   .single_feature
