add contact submit function, add html5mode for urls

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -14,7 +14,7 @@
                         mente, al enviar tu mensaje nos contactámos contigo lo más rápido posible, gracias por tu
                         confianza.</p>
 
-                    <form class="padding" action="#" method="post">
+                    <form class="padding" method="post" ng-submit="contact.formSubmit()">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="name">Nombre *</label>
