change url to contact in buttons

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,7 +8,7 @@
 
                     <p class="wow slideInUp" data-wow-duration="3s">Te ayudamos a revolucionar tu empresa, adentrandose
                         en el mundo digital </p>
-                    <a class="btn-green wow slideInUp" data-wow-duration="3s" href="*">Hablanos de tu proyecto</a>
+                    <a class="btn-green wow slideInUp" data-wow-duration="3s" ui-sref="contact">Hablanos de tu proyecto</a>
                 </div>
             </div>
         </div>
@@ -111,7 +111,7 @@
             </div>
             <div class="col-sm-4">
                 <div class="call_project text-right wow slideInRight" data-wow-duration="2s">
-                    <a href="*" class="btn-white-clear">Comenzar mi proyecto</a>
+                    <a ui-sref="contact" class="btn-white-clear">Comenzar mi proyecto</a>
                 </div>
             </div>
         </div>
