--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -65,7 +65,7 @@ p
   .mainmenu
     position absolute
     background #EBEBEB
-    padding 20px 0
+    padding 25px 0 0
     top 0px
     left 0
     right 0
@@ -236,12 +236,12 @@ p
     position absolute
     width 100%
     height auto
-    top 190px
+    top 197px
     text-align center
     font-size 24px
     color #fff
     line-height 120px
-    background transparent
+    background rgba(0, 0, 0, 0.75)
     text-shadow 0 1px 4px rgba(0, 0, 0, 0.51)
 
 #clients_area
@@ -291,26 +291,40 @@ p
 #blog_area
     background #fff
 
-
 .single_blog
   h2
     font-size 18px
-    color #000000
+    color #6B6B6B
     font-weight 700
     margin-top 20px
+  p
+    margin 10px 0
+    color #6B6B6B
 
+  img
+    width 100%
 
-.single_blog p
+  .comment-area
+    color #999999
+.single-proyect
+  h2
+    font-size 18px
+    color #6B6B6B
+    font-weight 700
+    margin-top 20px
+  p
     margin 10px 0
 
+  img
+    width 100%
 
-.comment_area
+  .comment-area
     color #999999
 
 
-.date i,
-.comment i
-    margin-right 10px
+  .date i,
+  .comment i
+      margin-right 10px
 
 
 /************** content area default ****************/
@@ -319,6 +333,9 @@ p
   margin 200px 0px 60px
   .title
     color #737373
+  .title-p
+    color #737373
+    font-size 18px
   .divider
     border: 1px solid #f5f5f5;
   .content-pages
@@ -379,6 +396,10 @@ p
 
 /**************** Buttons ***************/
 
+/* buttons sizes */
+.btn-sm
+  padding: 5px 10px !important
+
 .btn-green
   background #4ECB8C;
   display inline-block
@@ -416,4 +437,34 @@ p
     font-weight 700
     border-radius 5px
     border 3px solid #fff
+
+/******** Forms *************/
+
+.form-control
+  display block
+  width 100%
+  height 34px
+  padding 6px 12px
+  font-size 14px
+  line-height 1.42857143
+  color: #555
+  background-color #fff
+  background-image none
+  border 2px solid #ccc
+  border-radius 4px
+  -webkit-box-shadow inset 0 1px 1px rgba(0, 0, 0, .075)
+          box-shadow inset 0 1px 1px rgba(0, 0, 0, .075)
+  -webkit-transition border-color ease-in-out .15s
+  -webkit-box-shadow ease-in-out .15s
+       -o-transition border-color ease-in-out .15s
+  box-shadow ease-in-out .15s
+          transition border-color ease-in-out .15s
+  box-shadow ease-in-out .15s
+
+  &:focus
+    border-color #00CDFF
+    outline 0
+    -webkit-box-shadow 0px 0px 0px 9px rgba(0,0,0,.075)
+          box-shadow 0px 0px 0px 9px rgba(0,0,0,.075)
+
 
