--- a/app/css/main.css
+++ b/app/css/main.css
@@ -62,7 +62,7 @@ p {
 .header .mainmenu {
   position: absolute;
   background: #ebebeb;
-  padding: 20px 0;
+  padding: 25px 0 0;
   top: 0px;
   left: 0;
   right: 0;
@@ -214,12 +214,12 @@ p {
   position: absolute;
   width: 100%;
   height: auto;
-  top: 190px;
+  top: 197px;
   text-align: center;
   font-size: 24px;
   color: #fff;
   line-height: 120px;
-  background: transparent;
+  background: rgba(0,0,0,0.75);
   text-shadow: 0 1px 4px rgba(0,0,0,0.51);
 }
 #clients_area .title {
@@ -266,18 +266,37 @@ p {
 }
 .single_blog h2 {
   font-size: 18px;
-  color: #000;
+  color: #6b6b6b;
   font-weight: 700;
   margin-top: 20px;
 }
 .single_blog p {
   margin: 10px 0;
+  color: #6b6b6b;
 }
-.comment_area {
+.single_blog img {
+  width: 100%;
+}
+.single_blog .comment-area {
   color: #999;
 }
-.date i,
-.comment i {
+.single-proyect h2 {
+  font-size: 18px;
+  color: #6b6b6b;
+  font-weight: 700;
+  margin-top: 20px;
+}
+.single-proyect p {
+  margin: 10px 0;
+}
+.single-proyect img {
+  width: 100%;
+}
+.single-proyect .comment-area {
+  color: #999;
+}
+.single-proyect .date i,
+.single-proyect .comment i {
   margin-right: 10px;
 }
 #content-area {
@@ -285,6 +304,10 @@ p {
 }
 #content-area .title {
   color: #737373;
+}
+#content-area .title-p {
+  color: #737373;
+  font-size: 18px;
 }
 #content-area .divider {
   border: 1px solid #f5f5f5;
@@ -336,6 +359,9 @@ p {
   font-size: 14px;
   font-weight: 300;
 }
+.btn-sm {
+  padding: 5px 10px !important;
+}
 .btn-green {
   background: #4ecb8c;
   display: inline-block;
@@ -375,6 +401,41 @@ p {
   font-weight: 700;
   border-radius: 5px;
   border: 3px solid #fff;
+}
+.form-control {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  -webkit-transition: border-color ease-in-out 0.15s;
+  box-shadow: ease-in-out 0.15s;
+}
+.form-control -webkit-box-shadow inset 0 0px 0px rgba(0,
+.form-control 0,
+.form-control .075) {
+  box-shadow: inset 0 0px 0px rgba(0,0,0,0.075);
+}
+.form-control -webkit-box-shadow ease-in-out .15s {
+  -o-transition: border-color ease-in-out 0.15s;
+}
+.form-control box-shadow ease-in-out .15s {
+  transition: border-color ease-in-out 0.15s;
+}
+.form-control:focus {
+  border-color: #00cdff;
+  outline: 0;
+}
+.form-control:focus -webkit-box-shadow 0px 0px 0px 0px rgba(0,
+.form-control:focus 0,
+.form-control:focus .075) {
+  box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.075);
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .header_area_text {
