--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,4 +1,3 @@
-
 <section id="content-area">
     <div class="container">
         <div class="row">
@@ -9,7 +8,31 @@
         </div>
         <div class="row">
             <div class="col-md-12 content-pages">
-                <a ui-sref="post_detail({slug: post.list.results[0].slug})">detail</a>
+                <div class="container">
+                    <div class="col-sm-3">
+                        <div class="single_blog wow slideInUp" data-wow-duration="1s">
+                            <img class="img-responsive" src="images/1.jpg" alt="">
+
+                            <h2>Title post</h2>
+
+                            <div class="comment_area fix">
+                                <p>Shortly thereafter, I was working with RetailMeNot, tasked with designing its iOS and
+                                    Android app tutorial ..</p>
+
+                                <div class="date floatleft">
+                                    <p><span><i class="fa fa-calendar-o"></i></span> 4 Marzo 2015</p>
+                                </div>
+                                <div class="comment floatright">
+                                    <p><span><i class="fa fa-user"></i></span> María Isabel T.</p>
+                                </div>
+                            </div>
+                            <div class="text-center">
+                                <a class="btn btn-green btn-sm btn-block " ui-sref="post_detail({slug: post.list.results[0].slug})">detail</a>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
