--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -9,11 +9,10 @@
         <div class="row">
             <div class="col-md-12 content-pages">
                 <div class="container">
-                    <p class="title">Llena el siguiente formulario y describe cuales son tus dudas o que proyecto tienes
-                        en
-                        mente, al enviar tu mensaje nos contactámos contigo lo más rápido posible, gracias por tu
-                        confianza.</p>
-
+                        <p class="title-p text-center">Llena el siguiente formulario y describe <cuá></cuá>les son tus dudas o que proyecto
+                            tienes en mente, al enviar tu mensaje nos contactámos contigo lo más rápido posible,
+                            gracias por tu confianza.</p>
+                    <br/>
                     <form class="padding" action="">
                         <div class="col-md-6">
                             <div class="form-group">
