--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -1,1 +1,24 @@
-projects
+<section id="content-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h2 class="title">< Proyectos ></h2>
+                <hr class="divider"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 content-pages">
+                <div class="container">
+                    <div class="col-sm-4 no-padding" ng-repeat="project in home.projects.results">
+                        <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
+                            <a ui-sref="post_detail({slug: project.slug})">
+                                <h3>{{ project.title }}</h3>
+                                <img class="portfolio_img" src="../img/mm.jpg">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
