--- a/app/templates/single.html
+++ b/app/templates/single.html
@@ -8,7 +8,9 @@
         </div>
         <div class="row">
             <div class="col-md-12 content-pages">
-                <!--content here-->
+                <div class="container">
+                    <!--content here-->
+                </div>
             </div>
         </div>
     </div>
