Ajuste de estilo a seccion de proyectos en el index y ajuste de detalle de proyecto

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -241,7 +241,7 @@ p
     font-size 24px
     color #fff
     line-height 160px
-    background rgba(0, 0, 0, 0.75)
+    background transparent
     text-shadow 0 1px 4px rgba(0, 0, 0, 0.51)
 
 #clients_area
