--- a/app/css/main.css
+++ b/app/css/main.css
@@ -59,13 +59,8 @@ p {
 .header .mainmenu {
   position: absolute;
   background: #ebebeb;
-<<<<<<< HEAD
   padding: 25px 0 0;
   top: 0px;
-=======
-  padding: 20px 0;
-  top: 0;
->>>>>>> 8ead6c3a68259308db6674950692a87031099a2b
   left: 0;
   right: 0;
   z-index: 99999;
@@ -220,8 +215,8 @@ p {
   text-align: center;
   font-size: 24px;
   color: #fff;
-  line-height: 120px;
-  background: rgba(0,0,0,0.75);
+  line-height: 160px;
+  background: transparent;
   text-shadow: 0 1px 4px rgba(0,0,0,0.51);
 }
 #clients_area .title {
@@ -302,7 +297,7 @@ p {
   margin-right: 10px;
 }
 #content-area {
-  margin: 200px 0 60px;
+  margin: 200px 0px 60px;
 }
 #content-area .title {
   color: #737373;
@@ -419,10 +414,10 @@ p {
   -webkit-transition: border-color ease-in-out 0.15s;
   box-shadow: ease-in-out 0.15s;
 }
-.form-control -webkit-box-shadow inset 0 0px 0px rgba(0,
+.form-control -webkit-box-shadow inset 0 1px 1px rgba(0,
 .form-control 0,
 .form-control .075) {
-  box-shadow: inset 0 0px 0px rgba(0,0,0,0.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
 }
 .form-control -webkit-box-shadow ease-in-out .15s {
   -o-transition: border-color ease-in-out 0.15s;
@@ -434,10 +429,10 @@ p {
   border-color: #00cdff;
   outline: 0;
 }
-.form-control:focus -webkit-box-shadow 0px 0px 0px 0px rgba(0,
+.form-control:focus -webkit-box-shadow 0px 0px 0px 9px rgba(0,
 .form-control:focus 0,
 .form-control:focus .075) {
-  box-shadow: 0px 0px 0px 0px rgba(0,0,0,0.075);
+  box-shadow: 0px 0px 0px 9px rgba(0,0,0,0.075);
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .header_area_text {
@@ -465,6 +460,7 @@ p {
     padding: 0;
   }
   .logo {
+    margin-top: 0;
     width: 180px;
     margin-top: -5px;
   }
