--- a/app/templates/project_detail.html
+++ b/app/templates/project_detail.html
@@ -1,1 +1,18 @@
-project detail
+<section id="content-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h2 class="title">< Proyect detail ></h2>
+                <hr class="divider"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 content-pages">
+                <div class="container">
+                    <!--content here-->
+                    content detail
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
