Ajuste de animaciones

--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -10,7 +10,7 @@
             <div class="col-md-12 content-pages">
                 <div class="container">
                     <div class="col-sm-3">
-                        <div class="single_blog wow slideInUp" data-wow-duration="1s">
+                        <div class="single_blog" data-wow-duration="1s">
                             <img class="img-responsive" src="images/1.jpg" alt="">
 
                             <h2>Title post</h2>
