--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -91,8 +91,11 @@
         <div class="row">
             <div class="col-sm-3" ng-repeat="partner in home.parterns.results">
                 <div class="single_blog wow slideInUp" data-wow-duration="1s">
-                    <a {{ partner.link ?  href="{{ partner.link }}" target="_blank" : ui-sref="post_detail({slug: project.slug})"  }}>
-                        <img class="img-responsive" {{ partner.featuredImage }} alt="{{ partner.title }}">
+                    <a href="{{ partner.link }}" target="_blank" ng-if="partner.link">
+                        <img class="img-responsive" ng-src="{{ partner.featuredImage }}" alt="{{ partner.title }}">
+                    </a>
+                    <a ui-sref="post_detail({slug: project.slug})" ng-if="!partner.link">
+                        <img class="img-responsive" ng-src="{{ partner.featuredImage }}" alt="{{ partner.title }}">
                     </a>
                 </div>
             </div>
