Ajuste en detalles responsivos y control de animaciones

--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -30,6 +30,10 @@
 
 @media only screen and (max-width: 767px)
 
+  .single_blog {
+    margin-bottom 30px
+    padding 20px
+
   #content-area
     margin 160px 0px 60px
 
