--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-md-12 content-pages">
                 <div class="container">
-                    <div class="col-sm-4 no-padding" ng-repeat="project in home.projects.results">
+                    <div class="col-sm-4 no-padding" ng-repeat="project in project.list.results">
                         <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
                             <a ui-sref="post_detail({slug: project.slug})">
                                 <h3>{{ project.title }}</h3>
