--- a/app/css/responsive.styl
+++ b/app/css/responsive.styl
@@ -30,10 +30,6 @@
 
 @media only screen and (max-width: 767px)
 
-  .single_blog {
-    margin-bottom 30px
-    padding 20px
-
   #content-area
     margin 160px 0px 60px
 
@@ -145,17 +141,18 @@
     margin-bottom 10px
 
 
-  .single_blog h2
-    font-size 16px
-
-
-  .single_blog p
-    font-size 12px
-    margin-top 5px
-
-
   .single_blog
     margin-bottom 30px
+    padding 20px
+    h2
+      font-size 16px
+
+
+     p
+      font-size 12px
+      margin-top 5px
+
+
 
 
   .call_to_action_text h2
