--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -108,14 +108,14 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-8">
-                <div class="call_to_action_text wow wow slideInUp" data-wow-duration="2s">
+                <div class="call_to_action_text" data-wow-duration="2s">
                     <h2>¡Hablanos de tu proyecto!</h2>
 
                     <p>Envíanos un mensaje, dinos cuales son tus dudas y te atenderemos de ¡inmediato!</p>
                 </div>
             </div>
             <div class="col-sm-4">
-                <div class="call_project text-right wow wow slideInUp" data-wow-duration="2s">
+                <div class="call_project text-right" data-wow-duration="2s">
                     <a ui-sref="contact" class="btn-white-clear">Comenzar mi proyecto</a>
                 </div>
             </div>
