--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -45,7 +45,7 @@
 
                     <div ng-bind-html="home.featuredPost.excerpt"></div>
 
-                    <a ui-sref="post_detail({slug: home.featuredPost.slug})">Más acerca de nosotros</a>
+                    <a ui-sref="post_detail({slug: home.featuredPost.slug})">Leer más</a>
                 </div>
             </div>
         </div>
