--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -11,8 +11,8 @@
                 <div class="container">
                     <div class="col-sm-3" ng-repeat="post in post.list.results">
                         <div class="single_blog wow slideInUp" data-wow-duration="1s">
-                            <a title="Ver mas" ui-sref="post_detail({slug: post.slug})">
-                                <img class="img-responsive" ng-src="{{ post.featuredImage ? post.featuredImage : 'img/post-default.jpg' }}" alt="{{ post.title }}">
+                            <a title="Leer más" ui-sref="post_detail({slug: post.slug})">
+                                <img class="img-responsive" ng-src="{{ post.featuredImage ? post.featuredImage : 'https://s3-us-west-2.amazonaws.com/annalise-tingsystems/static/img/post-default.jpg' }}" alt="{{ post.title }}">
                             </a>
                             <h2>{{ post.title }}</h2>
 
@@ -27,7 +27,7 @@
                                 </div>
                             </div>
                             <div class="text-center">
-                                <a class="btn btn-green btn-sm btn-block " ui-sref="post_detail({slug: post.slug})">Ver mas</a>
+                                <a class="btn btn-green btn-sm btn-block " ui-sref="post_detail({slug: post.slug})">Leer más</a>
                             </div>
                         </div>
                     </div>
