--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-sm-4 no-padding" ng-repeat="project in home.projects.results">
                 <div class="portfolio_content" data-wow-duration="2s">
-                    <a ui-sref="post_detail({slug: project.slug})">
+                    <a title="Leer más" ui-sref="post_detail({slug: project.slug})">
                         <h3>{{ project.title }}</h3>
                         <img class="portfolio_img" ng-src="{{ project.featuredImage }}" alt="{{ project.title }}">
                     </a>
