--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2 class="title">< Blog ></h2>
+                <h2 class="title">Blog</h2>
                 <hr class="divider"/>
             </div>
         </div>
