--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2 class="title">< {{ page.detail.title }} ></h2>
+                <h2 class="title">{{ page.detail.title }}</h2>
                 <hr class="divider"/>
             </div>
         </div>
