--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -225,6 +225,16 @@ p
   h2
     margin-bottom: 15px
 
+.alliance
+  padding 10px
+
+.portfolio_page
+  padding-bottom 35px
+  h3
+    font-size 18px
+    padding-top 15px
+    color #6b6b6b
+    text-align center
 
 .portfolio_content
   position relative
@@ -302,7 +312,8 @@ p
     color #6B6B6B
 
   img
-    width 100%
+    width: 400px;
+    height: 200px;
 
   .comment-area
     color #999999
