--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -90,7 +90,7 @@
         </div>
         <div class="row">
             <div class="col-sm-3" ng-repeat="partner in home.parterns.results">
-                <div class="single_blog wow slideInUp" data-wow-duration="1s">
+                <div class="alliance wow slideInUp" data-wow-duration="1s">
                     <a title="Leer más" post-link="{ link: {url: partner.link, target: '_blank'} }" ui-sref="post_detail({slug: partner.slug})">
                         <img class="img-responsive" ng-src="{{ partner.featuredImage }}" alt="{{ partner.title }}">
                     </a>
