--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -9,11 +9,12 @@
         <div class="row">
             <div class="col-md-12 content-pages">
                 <div class="container">
-                    <div class="col-sm-4 no-padding" ng-repeat="project in project.list.results">
-                        <div class="portfolio_content wow slideInUp" data-wow-duration="2s">
+                    <div class="col-sm-3" ng-repeat="project in project.list.results">
+                        <div class="portfolio_page wow slideInUp" data-wow-duration="2s">
                             <a title="Leer más" post-link="{ link: {url: project.link, target: '_blank'} }" ui-sref="post_detail({slug: project.slug})">
-                                <h3>{{ project.title }}</h3>
                                 <img class="portfolio_img" ng-src="{{ project.featuredImage }}">
+                                <h3>{{ project.title }}</h3>
+                                <a class="btn btn-sm btn-green btn-block">Leer más</a>
                             </a>
                         </div>
                     </div>
