add postlink directive to prouect list

--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -14,7 +14,7 @@
                             <a title="Leer más" post-link="{ link: {url: project.link, target: '_blank'} }" ui-sref="post_detail({slug: project.slug})">
                                 <img class="portfolio_img" ng-src="{{ project.featuredImage }}">
                                 <h3>{{ project.title }}</h3>
-                                <a class="btn btn-sm btn-green btn-block">Leer más</a>
+                                <a class="btn btn-sm btn-green btn-block" title="Leer más" post-link="{ link: {url: project.link, target: '_blank'} }" ui-sref="post_detail({slug: project.slug})">Leer más</a>
                             </a>
                         </div>
                     </div>
