--- a/app/css/main.css
+++ b/app/css/main.css
@@ -53,13 +53,41 @@ p {
   font-weight: 400;
   font-size: 14px;
 }
-.header {
-  position: relative;
+header.smaller {
+  height: 85px;
+  box-shadow: 0 0 10px #999;
+}
+header.smaller .mainmenu {
+  padding-top: 0px;
+}
+header {
+  width: 100%;
+  height: 100px;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  background-color: #ebebeb;
+  -webkit-transition: height 0.3s;
+  -moz-transition: height 0.3s;
+  -ms-transition: height 0.3s;
+  -o-transition: height 0.3s;
+}
+header transition height 0.3s header.smaller h1#logo {
+  width: 150px;
+  height: 75px;
+  line-height: 75px;
+  font-size: 30px;
+}
+header transition height 0.3s header.smaller nav a {
+  line-height: 75px;
 }
 .header .mainmenu {
+  padding-top: 20px;
   position: absolute;
-  background: #ebebeb;
-  padding: 25px 0 0;
+  background: transparent;
+/*padding 25px 0 0*/
   top: 0px;
   left: 0;
   right: 0;
