Ajustes de template del blog y proyectos y sección de alianzas

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -90,7 +90,7 @@ header
 
 .header
   .mainmenu
-    padding-top: 20px;
+    padding-top 10px
     position absolute
     background transparent
     /*padding 25px 0 0*/
@@ -240,6 +240,9 @@ header
 
 .alliance
   padding 10px
+  .img-alliance
+    width: 200px;
+    margin: 0 auto;
 
 .portfolio_page
   padding-bottom 35px
@@ -248,6 +251,8 @@ header
     padding-top 15px
     color #6b6b6b
     text-align center
+    border 1px solid #f5f5f5
+    padding-bottom 25px
 .portfolio_content
   position relative
   margin-bottom: 0
@@ -309,12 +314,27 @@ header
 #blog_area
   background #fff
 
+.img-outstanding
+  width 100% !important
+  height 100% !important
+
+.outstanding-cmmnt
+  margin-top -1px
+h2.title-outstanding
+  font-size 32px !important
+  padding 38px 10px !important
+.post-oustanding
+  padding 30px 10px
 .single_blog
+  margin-bottom 30px
   h2
     font-size 18px
     color #6B6B6B
     font-weight 700
-    margin-top 20px
+    padding 20px 10px
+    border 1px solid #f5f5f5
+    margin-bottom -1px
+
   p
     margin 10px 0
     color #6B6B6B
@@ -325,6 +345,8 @@ header
 
   .comment-area
     color #999999
+    border 1px solid #f5f4f4
+    padding 0 10px
 
 .single-proyect
   h2
