--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -92,7 +92,7 @@
             <div class="col-sm-4" ng-repeat="partner in home.parterns.results">
                 <div class="alliance wow slideInUp" data-wow-duration="1s">
                     <a title="Leer más" post-link="{ link: {url: partner.link, target: '_blank'} }" ui-sref="post_detail({slug: partner.slug})">
-                        <img class="img-responsive" ng-src="{{ partner.featuredImage }}" alt="{{ partner.title }}">
+                        <img class="img-responsive img-alliance" ng-src="{{ partner.featuredImage }}" alt="{{ partner.title }}">
                     </a>
                 </div>
             </div>
