Ajuste de template blog y de resolociones responsivas

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -334,6 +334,13 @@ h2.title-outstanding
     padding 20px 10px
     border 1px solid #f5f5f5
     margin-bottom -1px
+    display inline-block
+    white-space nowrap
+    overflow hidden
+    text-overflow ellipsis
+    -o-text-overflow ellipsis
+    width 100%
+
 
   p
     margin 10px 0
@@ -368,6 +375,10 @@ h2.title-outstanding
     margin-right 10px
 
 /************** content area default ****************/
+.content-blog
+  margin   150px 0px 60px !important
+.post-out
+  margin-top -5px
 
 #content-area
   margin 200px 0px 60px
