--- a/app/css/main.css
+++ b/app/css/main.css
@@ -331,6 +331,12 @@ h2.title-outstanding {
   padding: 20px 10px;
   border: 1px solid #f5f5f5;
   margin-bottom: -1px;
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  width: 100%;
 }
 .single_blog p {
   margin: 10px 0;
@@ -363,6 +369,12 @@ h2.title-outstanding {
 .single-proyect .date i,
 .single-proyect .comment i {
   margin-right: 10px;
+}
+.content-blog {
+  margin: 150px 0px 60px !important;
+}
+.post-out {
+  margin-top: -5px;
 }
 #content-area {
   margin: 200px 0px 60px;
@@ -589,6 +601,10 @@ h2.title-outstanding {
   }
 }
 @media only screen and (max-width: 767px) {
+  h2.title-outstanding {
+    font-size: 16px !important;
+    padding: 20px 10px !important;
+  }
   .post-out {
     display: none;
   }
@@ -617,7 +633,7 @@ h2.title-outstanding {
   }
   header {
     width: 100%;
-    height: 250px;
+    height: 210px;
     overflow: hidden;
     position: fixed;
     top: 0;
@@ -641,6 +657,9 @@ h2.title-outstanding {
   }
   #content-area {
     margin: 160px 0px 60px;
+  }
+  .content-blog {
+    margin: 0px 0px 60px !important;
   }
   #slider-area {
     padding-bottom: 300px;
@@ -736,10 +755,20 @@ h2.title-outstanding {
   }
   .single_blog {
     margin-bottom: 30px;
-    padding: 20px;
+    padding: 0px;
   }
   .single_blog h2 {
+    width: 100%;
     font-size: 16px;
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+  }
+  .single_blog img {
+    width: 100%;
+    height: 100%;
   }
   .single_blog p {
     font-size: 12px;
