--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -1,4 +1,4 @@
-<section id="content-area">
+<section id="content-area" class="content-blog">
     <div class="container">
         <div class="row">
             <div class="col-md-12 content-pages">
