Ajuste de estilo en sección de contacto, se agrego flecha en el slider que indica que hay  más información y se haga scroll

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -8,7 +8,8 @@
 
                     <p class="wow slideInUp" data-wow-duration="3s">Te ayudamos a revolucionar tu empresa, adentrandose
                         en el mundo digital </p>
-                    <a class="btn-green wow slideInUp" data-wow-duration="3s" ui-sref="contact">Hablanos de tu proyecto</a>
+                    <a class="btn-green wow slideInUp" data-wow-duration="3s" ui-sref="contact">Hablanos de tu proyecto</a><br/>
+                    <a href="#portfolio_area" class="wow bounceInUp scrollme" title="Más información"> <i class="fa fa-angle-down fa-4x"></i></a>
                 </div>
             </div>
         </div>
