--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -133,6 +133,9 @@ header
   padding-bottom: 400px
   background-position: center center
 
+  .scrollme
+    color #555555
+    font-size 28px
 .header-margin
   margin-top 150px
 
@@ -482,23 +485,57 @@ h2.title-outstanding
     font-weight 700
     border-radius 5px
     border 3px solid #fff
+/*********** Page contact *************/
+.facebook
+  color #666666
+  i
+    color #3B5998
+.twitter
+  color #666666
+  i
+    color #28A9E0
+.linkedin
+  color #666666
+  i
+    color #0177B5
+.social-media
+  color #666666
+  padding 60px 0
 
-/******** Forms *************/
+.phone
+  color #666666
+  i
+    color #FF801A
+.marker
+  color #666666
+  i
+    color #E85A5A
+.mail
+  color #666666
+  i
+    color #FFA500
+/******** Form section *************/
+
+.form-section
+  background #00CDFF
+  padding 60px 0
+  .title, .text-form
+    color #565656
 
 .form-control
   display block
   width 100%
-  height 34px
+  height 44px
   padding 6px 12px
   font-size 14px
   line-height 1.42857143
   color: #555
   background-color #fff
   background-image none
-  border 2px solid #ccc
+  border 5px solid #00CDFF
   border-radius 4px
-  -webkit-box-shadow inset 0 1px 1px rgba(0, 0, 0, .075)
-  box-shadow inset 0 1px 1px rgba(0, 0, 0, .075)
+  -webkit-box-shadow inset 0 1px 1px rgba(0, 0, 0, 0)
+  box-shadow inset 0 1px 1px rgba(0, 0, 0, 0)
   -webkit-transition border-color ease-in-out .15s
   -webkit-box-shadow ease-in-out .15s
   -o-transition border-color ease-in-out .15s
@@ -507,9 +544,9 @@ h2.title-outstanding
   box-shadow ease-in-out .15s
 
   &:focus
-    border-color #00CDFF
+    border-color #f5f5f5
     outline 0
-    -webkit-box-shadow 0 0 0 9px rgba(0, 0, 0, .075)
-    box-shadow 0 0 0 9px rgba(0, 0, 0, .075)
+    -webkit-box-shadow 0 0 0 9px rgba(0, 0, 0, 0)
+    box-shadow 0 0 0 9px rgba(0, 0, 0, 0)
 
 
