--- a/app/css/main.css
+++ b/app/css/main.css
@@ -125,6 +125,10 @@ header transition height 0.3s header.smaller nav a {
   padding-bottom: 400px;
   background-position: center center;
 }
+#slider-area .scrollme {
+  color: #555;
+  font-size: 28px;
+}
 .header-margin {
   margin-top: 150px;
 }
@@ -479,20 +483,68 @@ h2.title-outstanding {
   border-radius: 5px;
   border: 3px solid #fff;
 }
+.facebook {
+  color: #666;
+}
+.facebook i {
+  color: #3b5998;
+}
+.twitter {
+  color: #666;
+}
+.twitter i {
+  color: #28a9e0;
+}
+.linkedin {
+  color: #666;
+}
+.linkedin i {
+  color: #0177b5;
+}
+.social-media {
+  color: #666;
+  padding: 60px 0;
+}
+.phone {
+  color: #666;
+}
+.phone i {
+  color: #ff801a;
+}
+.marker {
+  color: #666;
+}
+.marker i {
+  color: #e85a5a;
+}
+.mail {
+  color: #666;
+}
+.mail i {
+  color: #ffa500;
+}
+.form-section {
+  background: #00cdff;
+  padding: 60px 0;
+}
+.form-section .title,
+.form-section .text-form {
+  color: #565656;
+}
 .form-control {
   display: block;
   width: 100%;
-  height: 34px;
+  height: 44px;
   padding: 6px 12px;
   font-size: 14px;
   line-height: 1.42857143;
   color: #555;
   background-color: #fff;
   background-image: none;
-  border: 2px solid #ccc;
+  border: 5px solid #00cdff;
   border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0);
   -webkit-transition: border-color ease-in-out 0.15s;
   -webkit-box-shadow: ease-in-out 0.15s;
   -o-transition: border-color ease-in-out 0.15s;
@@ -501,10 +553,10 @@ h2.title-outstanding {
   box-shadow: ease-in-out 0.15s;
 }
 .form-control:focus {
-  border-color: #00cdff;
+  border-color: #f5f5f5;
   outline: 0;
-  -webkit-box-shadow: 0 0 0 9px rgba(0,0,0,0.075);
-  box-shadow: 0 0 0 9px rgba(0,0,0,0.075);
+  -webkit-box-shadow: 0 0 0 9px rgba(0,0,0,0);
+  box-shadow: 0 0 0 9px rgba(0,0,0,0);
 }
 @media only screen and (min-width: 991px) and (max-width: 1024px) {
   .single_blog .comment-area {
