--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -2,49 +2,102 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h2 class="title">Contacto</h2>
+                <h2 class="title"> Identifica el medio por el cual quieres contactarte con nosotros</h2>
                 <hr class="divider"/>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12 content-pages">
                 <div class="container">
-                    <p class="title-p text-center">Llena el siguiente formulario y describe cuáles son tus dudas o que proyecto tienes
-                        en
-                        mente, al enviar tu mensaje nos contactámos contigo lo más rápido posible, gracias por tu
-                        confianza.</p>
-
-                    <form class="padding" method="post" ng-submit="contact.formSubmit()">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label for="name">Nombre *</label>
-                                <input type="text" class="form-control" id="name" name="name" placeholder="Nombre"
-                                       required ng-model="contact.formData.name">
-                            </div>
-                            <div class="form-group">
-                                <label for="email">Correo electrónico *</label>
-                                <input type="email" class="form-control" id="email" name="email"
-                                       placeholder="Correo electrónico" required ng-model="contact.formData.email">
-                            </div>
-                            <div class="form-group">
-                                <label for="phone1">Teléfono *</label>
-                                <input type="text" class="form-control" id="phone1" name="phone1" placeholder="Teléfono"
-                                       required ng-model="contact.formData.phone1">
+                    <div class="col-md-12 social-media">
+                        <div class="col-sm-4 ">
+                            <div class="text-center">
+                                <a href="https://www.facebook.com/tingsystems" class="facebook" target="_blank">
+                                    <i class="fa fa-facebook fa-4x"></i> <br/> Facebook <br/> /tingsystems
+                                </a>
                             </div>
                         </div>
-                        <div class="col-md-6 ">
-                            <div class="form-group">
-                                <label for="message">Escribenos cuales son tus necesidades *</label>
-                                <textarea class="form-control" id="message" name="message" rows="6"
-                                          placeholder="Escribe tu mensaje aquí" required ng-model="contact.formData.message"></textarea>
-                            </div>
-                            <div class="pull-right">
-                                <button type="submit" class="btn btn-green">Enviar</button>
+                        <div class="col-sm-4">
+                            <div class="text-center">
+                                <a href="https://twitter.com/Tingsystems" class="twitter" target="_blank">
+                                    <i class="fa fa-twitter fa-4x"></i> <br/> Twitter <br/> @Tingsystems
+                                </a>
                             </div>
                         </div>
-                    </form>
+                        <div class="col-sm-4">
+                            <div class="text-center">
+                                <a href="https://www.linkedin.com/company/tingsystems" class="linkedin" target="_blank">
+                                    <i class="fa fa-linkedin fa-4x"></i> <br/> Linkendin <br/>/tingsystems
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 social-media">
+                        <div class="col-sm-4">
+                            <div class=" text-center">
+                                <a href="tel:013531283781" class="phone">
+                                    <i class="fa fa-phone fa-4x"></i> <br/> Teléfono <br/>
+                                    01(353) 128 3781
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="text-center">
+                                <a href="*" class="marker">
+                                    <i class="fa fa-map-marker fa-4x"></i> <br/> Ubicación <br/>
+                                    Colonia Hospitales, Calzada Juarez #367 Jiquilpan, Michoacán, México
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-sm-4">
+                            <div class="text-center">
+                                <a href="mailto:info@tingsystems.com" class="mail">
+                                    <i class="fa fa-envelope-o fa-4x"></i> <br/> Correo Electrónico <br/>
+                                    info@tingsystems.com
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+<div class="form-section">
+    <div class="container">
+        <h3 class="title text-center">O llena el siguiente formulario y describe cuáles son tus dudas o
+                que proyecto tienes
+                en mente</h3>
+        <form class="padding" method="post" ng-submit="contact.formSubmit()">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label class="text-form" for="name">Nombre *</label>
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Nombre"
+                           required ng-model="contact.formData.name">
+                </div>
+                <div class="form-group">
+                    <label class="text-form" for="email">Correo electrónico *</label>
+                    <input type="email" class="form-control" id="email" name="email"
+                           placeholder="Correo electrónico" required ng-model="contact.formData.email">
+                </div>
+                <div class="form-group">
+                    <label class="text-form" for="phone1">Teléfono *</label>
+                    <input type="text" class="form-control" id="phone1" name="phone1"
+                           placeholder="Teléfono"
+                           required ng-model="contact.formData.phone1">
+                </div>
+            </div>
+            <div class="col-md-6 ">
+                <div class="form-group">
+                    <label class="text-form" for="message">Escribenos cuales son tus necesidades *</label>
+                                <textarea class="form-control" id="message" name="message" rows="7"
+                                          placeholder="Escribe tu mensaje aquí" required
+                                          ng-model="contact.formData.message"></textarea>
+                </div>
+                <div class="pull-right">
+                    <button type="submit" class="btn btn-white-clear">Enviar</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
