Ajuste de contacto y urls

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -43,10 +43,10 @@
                         </div>
                         <div class="col-sm-4 wow slideInUp">
                             <div class="text-center">
-                                <a href="*" class="marker">
+                                <p class="marker">
                                     <i class="fa fa-map-marker fa-4x"></i> <br/> Ubicación <br/>
                                     Colonia Hospitales, Calzada Juarez #367 Jiquilpan, Michoacán, México
-                                </a>
+                                </p>
                             </div>
                         </div>
                         <div class="col-sm-4 wow slideInUp">
