--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -517,7 +517,7 @@ h2.title-outstanding
 /******** Form section *************/
 
 .form-section
-  background #00CDFF
+  background #f5f5f5
   padding 60px 0
   .title, .text-form
     color #565656
@@ -532,7 +532,7 @@ h2.title-outstanding
   color: #555
   background-color #fff
   background-image none
-  border 5px solid #00CDFF
+  border 2px solid #f5f5f5
   border-radius 4px
   -webkit-box-shadow inset 0 1px 1px rgba(0, 0, 0, 0)
   box-shadow inset 0 1px 1px rgba(0, 0, 0, 0)
