Ajuste de contacto boton enviar

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -95,7 +95,7 @@
                                           ng-model="contact.formData.message"></textarea>
                 </div>
                 <div class="pull-right">
-                    <button type="submit" class="btn btn-white-clear">Enviar</button>
+                    <button type="submit" class="btn-green">Enviar</button>
                 </div>
             </div>
         </form>
